--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -5,7 +5,7 @@
     left: 0;
     right: 0;
     margin: auto;
-    background-color: #000;
+    /* background-color: #000; */
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
