refactor: estrutura inicial

--- a/src/views/index/index.html
+++ b/src/views/index/index.html
@@ -13,8 +13,7 @@
 
 <body>
     <div id="gif-wrap"></div>
-    <div id="p"></div>
-    <script src="index.js"></script>
+    <script src="index/index.js"></script>
 </body>
 
 </html>
