--- a/src/views/index/index.html
+++ b/src/views/index/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div id="gif-wrap"></div>
+    <div id="gif-wrapper"></div>
     <script src="index/index.js"></script>
 </body>
 
